--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "vite-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "type": "modules",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "vite": "^3.0.8"
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1"
   }
 }
