--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "tsc src/**/*.ts -w --outDir dist"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "typescript": "^4.6.4"
   },
   "dependencies": {
