--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2015",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext", "DOM", "es6"],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
@@ -17,8 +17,5 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src",
-    "sys.d.ts"
-  ]
+  "include": ["src", "global.d.ts"]
 }
